<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.hnrc</groupId>
  <artifactId>hnrc</artifactId>
  <version>0001</version>

  <url>
    https:/github.com/jks207/semi.git
  </url>

  <name>
    hnrc
  </name>
  <packaging>war</packaging>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <java.version>11</java.version>
    <spring.version>5.3.10</spring.version>
    <spring.security.version>5.4.6</spring.security.version>
  </properties>

  <dependencies>
    <!-- Spring Core -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${spring.version}</version>
    </dependency>

    <!-- Spring Web MVC -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
      <version>${spring.version}</version>
    </dependency>

    <!-- Spring Web -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <!-- Spring Data -->
    <dependency>
      <groupId>
        org.springframework.data
      </groupId>
      <artifactId>
        spring-data-commons
      </artifactId>
      <version>
        1.9.1.RELEASE
      </version>
    </dependency>
    <!-- Servlet API -->
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>4.0.1</version>
      <scope>provided</scope>
    </dependency>

    <!-- JSTL -->
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>jstl</artifactId>
      <version>1.2</version>
    </dependency>

    <!-- Spring Test -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- JUnit -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.4.7</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>2.20.0</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.36</version>
    </dependency>


    <!-- Spring Security -->
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-web</artifactId>
      <version>${spring.security.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-config</artifactId>
      <version>${spring.security.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-taglibs</artifactId>
      <version>${spring.security.version}</version>
    </dependency>

    <!-- Apache Commons -->
    <dependency>
      <groupId>
        commons-dbcp
      </groupId>
      <artifactId>
        commons-dbcp
      </artifactId>
      <version>
        1.4
      </version>
    </dependency>
    <dependency>
      <groupId>
        commons-io
      </groupId>
      <artifactId>
        commons-io
      </artifactId>
      <version>
        2.4
      </version>
    </dependency>
    <dependency>
      <groupId>
        commons-fileupload
      </groupId>
      <artifactId>
        commons-fileupload
      </artifactId>
      <version>
        1.3.1
      </version>
    </dependency>
    <dependency>
      <groupId>
        org.apache.commons
      </groupId>
      <artifactId>
        commons-compress
      </artifactId>
      <version>
        1.10
      </version>
    </dependency>
    <dependency>
      <groupId>
        com.amazonaws
      </groupId>
      <artifactId>
        aws-java-sdk
      </artifactId>
      <version>
        1.11.4
      </version>
    </dependency>
    <dependency>
      <groupId>
        com.amazonaws
      </groupId>
      <artifactId>
        aws-java-sdk-core
      </artifactId>
      <version>
        1.11.248
      </version>
    </dependency>
    <dependency>
      <groupId>
        javax.servlet
      </groupId>
      <artifactId>
        javax.servlet-api
      </artifactId>
      <version>
        3.1.0
      </version>
      <scope>
        provided
      </scope>
    </dependency>
    <dependency>
      <groupId>
        javax.inject
      </groupId>
      <artifactId>
        javax.inject
      </artifactId>
      <version>
        1
      </version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/javax.xml.parsers/jaxp-api -->
    <dependency>
      <groupId>
        javax.xml.parsers
      </groupId>
      <artifactId>
        jaxp-api
      </artifactId>
      <version>
        1.4.5
      </version>
    </dependency>

    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>2.0.1.Final</version> <!-- 최신 안정 버전 사용 -->
    </dependency>


    <!-- https://mvnrepository.com/artifact/org.w3c/dom -->
    <dependency>
      <groupId>
        org.w3c
      </groupId>
      <artifactId>
        dom
      </artifactId>
      <version>
        2.3.0-jaxb-1.0.6
      </version>
    </dependency>
    <dependency>
      <groupId>
        commons-lang
      </groupId>
      <artifactId>
        commons-lang
      </artifactId>
      <version>
        2.6
      </version>
    </dependency>
    <dependency>
      <groupId>
        commons-httpclient
      </groupId>
      <artifactId>
        commons-httpclient
      </artifactId>
      <version>
        3.1
      </version>
    </dependency>
    <!-- Jackson JSON -->
    <dependency>
      <groupId>
        com.fasterxml.jackson.core
      </groupId>
      <artifactId>
        jackson-core
      </artifactId>
      <version>
        2.14.2
      </version>
    </dependency>
    <dependency>
      <groupId>
        com.fasterxml.jackson.core
      </groupId>
      <artifactId>
        jackson-annotations
      </artifactId>
      <version>
        2.14.2
      </version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.4</version>
    </dependency>
    <dependency>
      <groupId>
        com.fasterxml.jackson.core
      </groupId>
      <artifactId>
        jackson-databind
      </artifactId>
      <version>
        2.14.2
      </version>
    </dependency>
    <dependency>
      <groupId>
        com.fasterxml.jackson.datatype
      </groupId>
      <artifactId>
        jackson-datatype-jsr310
      </artifactId>
      <version>
        2.14.2
      </version>
    </dependency>
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.1</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>2.3.1</version>
    </dependency>
    <dependency>
      <groupId>
        org.json
      </groupId>
      <artifactId>
        json
      </artifactId>
      <version>
        20160810
      </version>
    </dependency>
    <!-- JSR-303 Bean Validation -->
    <dependency>
      <groupId>
        org.hibernate
      </groupId>
      <artifactId>
        hibernate-validator
      </artifactId>
      <version>
        6.2.0.Final
      </version>
    </dependency>
    <dependency>
      <groupId>
        org.hibernate
      </groupId>
      <artifactId>
        hibernate-validator-annotation-processor
      </artifactId>
      <version>
        6.2.0.Final
      </version>
    </dependency>
    <dependency>
      <groupId>
        org.apache.commons
      </groupId>
      <artifactId>
        commons-compress
      </artifactId>
      <version>
        1.10
      </version>
    </dependency>
    <dependency>
      <groupId>
        org.jsoup
      </groupId>
      <artifactId>
        jsoup
      </artifactId>
      <version>
        1.11.3
      </version>
    </dependency>
    <dependency>
      <groupId>
        com.zaxxer
      </groupId>
      <artifactId>
        HikariCP
      </artifactId>
      <version>
        4.0.3
      </version>
    </dependency>

    <!-- MySQL Connector -->
    <dependency>
      <groupId>
        mysql
      </groupId>
      <artifactId>
        mysql-connector-java
      </artifactId>
      <version>
        8.0.31
      </version>
    </dependency>
    <!-- Date/Time Library -->
    <dependency>
      <groupId>
        joda-time
      </groupId>
      <artifactId>
        joda-time
      </artifactId>
      <version>
        2.8.2
      </version>
    </dependency>


    <!-- MyBatis -->
    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis</artifactId>
      <version>3.5.10</version>
    </dependency>
    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis-spring</artifactId>
      <version>2.0.7</version>
    </dependency>


  </dependencies>



  <build>

    <plugins>
      <!-- Maven war plugin 설정 -->
      <plugin>
        <groupId>
          org.apache.maven.plugins
        </groupId>
        <artifactId>
          maven-surefire-plugin
        </artifactId>
        <version>
          2.18.1
        </version>
        <configuration>
          <skipTests>
            true
          </skipTests>
        </configuration>
      </plugin>
      <plugin>
        <groupId>
          org.apache.maven.plugins
        </groupId>
        <artifactId>
          maven-compiler-plugin
        </artifactId>
        <version>
          3.3
        </version>
        <configuration>
          <source>11</source>
          <target>11</target>
          <encoding>
            UTF-8
          </encoding>
          <showWarnings>
            true
          </showWarnings>
          <showDeprecation>
            true
          </showDeprecation>
        </configuration>
      </plugin>
      <plugin>
        <groupId>
          org.apache.tomcat.maven
        </groupId>
        <artifactId>
          tomcat7-maven-plugin
        </artifactId>
        <version>
          2.2
        </version>
        <configuration>
          <path>
            /
          </path>
          <port>
            8080
          </port>
          <uriEncoding>
            UTF-8
          </uriEncoding>
        </configuration>
        <executions>
          <execution>
            <id>
              tomcat-run
            </id>
            <goals>
              <goal>
                run-war-only
              </goal>
            </goals>
            <phase>
              pre-integration-test
            </phase>
            <configuration>
              <fork>
                true
              </fork>
              <port>
                ${integrationtest.server.port}
              </port>
              <systemProperties>
                <JAVA_OPTS>
                  -Xms512m -Xmx1024m -XX:MaxPermSize=512m
                </JAVA_OPTS>
              </systemProperties>
            </configuration>
          </execution>
          <execution>
            <id>
              tomcat-shutdown
            </id>
            <goals>
              <goal>
                shutdown
              </goal>
            </goals>
            <phase>
              post-integration-test
            </phase>
            <configuration>
              <skipErrorOnShutdown>
                true
              </skipErrorOnShutdown>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>
          org.apache.maven.plugins
        </groupId>
        <artifactId>
          maven-failsafe-plugin
        </artifactId>
        <version>
          2.18.1
        </version>
        <executions>
          <execution>
            <id>
              integration-test
            </id>
            <goals>
              <goal>
                integration-test
              </goal>
            </goals>
            <configuration>
              <systemProperties>
                <integrationtest.webdriver>
                  ${integrationtest.webdriver}
                </integrationtest.webdriver>
                <integrationtest.server.host>
                  ${integrationtest.server.host}
                </integrationtest.server.host>
              </systemProperties>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.2</version>
      </plugin>
    </plugins>
    <finalName>
      ROOT##${project.version}
    </finalName>
    <resources>
      <resource>
        <directory>
          src/main/resources/common
        </directory>
      </resource>
      <resource>
        <directory>
          src/main/resources/${env}
        </directory>
      </resource>
    </resources>
  </build>

  <profiles>
    <profile>
      <id>
        prod
      </id>
      <properties>
        <env>
          prod
        </env>
        <warname>
          ${env}
        </warname>
        <integrationtest.webdriver>
          chrome
        </integrationtest.webdriver>
        <integrationtest.server.host>
          localhost
        </integrationtest.server.host>
        <integrationtest.server.port>
          8080
        </integrationtest.server.port>
      </properties>
    </profile>
    <profile>
      <id>
        dev
      </id>
      <properties>
        <env>
          dev
        </env>
        <warname>
          ${env}
        </warname>
        <integrationtest.webdriver>
          chrome
        </integrationtest.webdriver>
        <integrationtest.server.host>
          localhost
        </integrationtest.server.host>
        <integrationtest.server.port>
          8080
        </integrationtest.server.port>
      </properties>
      <activation>
        <activeByDefault>
          true
        </activeByDefault>
      </activation>
    </profile>
  </profiles>
  <reporting>
    <excludeDefaults>
      true
    </excludeDefaults>
    <plugins>
      <plugin>
        <artifactId>
          maven-jxr-plugin
        </artifactId>
        <version>
          2.5
        </version>
      </plugin>
      <plugin>
        <artifactId>
          maven-pmd-plugin
        </artifactId>
        <version>
          3.6
        </version>
        <configuration>
          <targetJdk>
            1.8
          </targetJdk>
        </configuration>
      </plugin>
      <plugin>
        <groupId>
          org.codehaus.mojo
        </groupId>
        <artifactId>
          findbugs-maven-plugin
        </artifactId>
        <version>
          3.0.1
        </version>
        <configuration>
          <findbugsXmlOutput>
            true
          </findbugsXmlOutput>
          <xmlOutput>
            true
          </xmlOutput>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
  <repositories>
    <repository>
      <id>
        in-project
      </id>
      <name>
        In-Project Custom Jars
      </name>
      <url>
        file://${project.basedir}/ext-lib
      </url>
    </repository>
  </repositories>

</project>
